--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcrypt": "^5.1.1",
     "commander": "^11.0.0",
