--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "sessionstorage": "^0.1.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "winston": "^3.11.0"
   }
 }
