--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": " node src/app.js --mode productivo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,6 +26,7 @@
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
     "mongoose-paginate-v2": "^1.7.31",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
@@ -32,6 +34,7 @@
     "session-file-store": "^1.5.0",
     "sessionstorage": "^0.1.0",
     "socket.io": "^4.7.2",
+    "twilio": "^4.19.0",
     "winston": "^3.11.0"
   }
 }
