--- a/src/config/.env.prod
+++ b/src/config/.env.prod
@@ -3,3 +3,6 @@ MONGO_URL="mongodb+srv://vazquezcristianr:Cristian123@clustercristian.ggp7vhd.mo
 ADMIN_NAME="cristianvazquezr@gmail.com"
 ADMIN_PASS=1234
 ENVIROMENT="produccion"
+MAILING_USER=""
+MAILING_SERVICE=""
+MAILING_PASS=""
