--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "session-file-store": "^1.5.0",
     "sessionstorage": "^0.1.0",
     "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "twilio": "^4.19.0",
     "winston": "^3.11.0"
   }
