--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@faker-js/faker": "^8.2.0",
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcrypt": "^5.1.1",
+    "chai": "^4.3.10",
     "commander": "^11.0.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
@@ -23,6 +24,7 @@
     "express-handlebars": "^7.1.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.2.0",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
     "mongoose-paginate-v2": "^1.7.31",
@@ -34,6 +36,7 @@
     "session-file-store": "^1.5.0",
     "sessionstorage": "^0.1.0",
     "socket.io": "^4.7.2",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "twilio": "^4.19.0",
