--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
+    "moment": "^2.29.4",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
     "mongoose-paginate-v2": "^1.7.31",
@@ -40,6 +41,8 @@
     "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "sweetalert2": "^11.10.1",
+    "toastify-js": "^1.12.0",
     "twilio": "^4.19.0",
     "winston": "^3.11.0"
   }
